docs(代码生成模块): 调整文档